# gfx_2020

./: Cargo.toml  README.md  TLDR.md  recompile_all_shaders.py
src/: brap.rs  lib.rs  main.rs  renderer.rs  simple_arena.rs
src/data/: quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  quad2.vert
src_graveyard/: arrow.rs  want.rs
