[package]
name = "gfx_2020"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx-hal = "0.6.0"
gfx-backend-vulkan = "0.6.5"
raw-window-handle = "0.3.3"
winit = "0.23.0"
image = "0.23.11"
gfx-auxil = "0.7.0"
gfx-backend-dx12 = "0.6.13"
debug_stub_derive = "0.3.0"